# app_karate

./: .gitignore  Dockerfile  README.md  app.py  config.toml  df_completo.csv  df_final.csv  kata.csv  pyproject.toml  requirements.txt
backend/: conexao.py  src.py
backend/src/: etl.py
models/: atletas_luta_kata.py
src/: etl.py  src.py
